// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`patterns.md scaffold > empty analysis (analyzer failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** None

[Setup will investigate source files or ask: Does this project use error handling?]

## Validation

**Detected:** None

[Setup will investigate source files or ask: Does this project use validation?]

## Database

**Detected:** None

[Setup will investigate source files or ask: Does this project use database?]

## Authentication

**Detected:** None

[Setup will investigate source files or ask: Does this project use authentication?]

## Testing

**Detected:** None

[Setup will investigate source files or ask: Does this project use testing?]

---

## Framework Patterns

[Setup will incorporate guidance from context/setup/framework-snippets/generic.md]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`patterns.md scaffold > flat Next.js project with 1 pattern 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** None

[Setup will investigate source files or ask: Does this project use error handling?]

## Validation

**Detected:** None

[Setup will investigate source files or ask: Does this project use validation?]

## Database

**Detected:** None

[Setup will investigate source files or ask: Does this project use database?]

## Authentication

**Detected:** None

[Setup will investigate source files or ask: Does this project use authentication?]

## Testing

**Detected:** vitest
**Confidence:** 0.92

**Evidence:**
- vitest in dependencies

[Setup will add: Real code examples from codebase showing usage, best practices, common patterns]

---

## Framework Patterns

[Setup will incorporate guidance from context/setup/framework-snippets/nextjs.md]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`patterns.md scaffold > rich FastAPI project with 5 patterns 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Patterns — test-project

## Error Handling

**Detected:** exceptions (fastapi)
**Confidence:** 0.90

**Evidence:**
- HTTPException imports

[Setup will add: Real code examples from codebase showing usage, best practices, common patterns]

## Validation

**Detected:** pydantic
**Confidence:** 0.95

**Evidence:**
- BaseModel usage
- 7 Pydantic models

[Setup will add: Real code examples from codebase showing usage, best practices, common patterns]

## Database

**Detected:** Multiple patterns

**Primary:**
- **Library:** sqlalchemy (async)
- **Confidence:** 0.95
- **Evidence:**
  - AsyncSession in 12 files
  - asyncpg driver

**Also detected:**
- sqlalchemy (sync) — confidence: 0.85

[Setup will add: Real code examples showing both patterns, explain why multiple (legacy code, migration, different use cases)]

## Authentication

**Detected:** oauth2-jwt
**Confidence:** 0.95

**Evidence:**
- python-jose in dependencies
- OAuth2PasswordBearer detected

[Setup will add: Real code examples from codebase showing usage, best practices, common patterns]

## Testing

**Detected:** pytest
**Confidence:** 1.00

**Evidence:**
- pytest in dependencies
- pytest.ini found

[Setup will add: Real code examples from codebase showing usage, best practices, common patterns]

---

## Framework Patterns

[Setup will incorporate guidance from context/setup/framework-snippets/fastapi.md]

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
